--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <section class="hero">
         <div class="hero-content">
             <!-- UPDATE: Replace with your professional headshot URL -->
-            <div class="profile-photo" style="background-image: url('profile-photo.jpg');">
+            <div class="profile-photo" style="background-image: url('Head-shot.jpg');">
             </div>
             <h1>Biniyam Kebede</h1>
             <p class="subtitle">Cloud-Certified Data Engineer</p>
