--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                     <a href="https://www.linkedin.com/in/byka" target="_blank" rel="noopener noreferrer" class="contact-link"><div class="contact-item"><i class="fab fa-linkedin"></i><span>linkedin.com/in/byka</span></div></a>
                     <a href="tel:+14046030407" class="contact-link"><div class="contact-item"><i class="fas fa-phone"></i><span>+1 (404) 603-0407</span></div></a>
                 </div>
-                <!-- FIX: The form 'action' attribute now contains your confirmed Formspree URL. -->
-                <form class="contact-form" action="https://formspree.io/f/xzzgypry" method="POST">
+                <!-- FIX: The form 'action' attribute now contains your new, confirmed Formspree URL. -->
+                <form class="contact-form" action="https://formspree.io/f/mjkrjbrw" method="POST">
                     <div class="form-group">
                         <label for="name">Your Name</label>
                         <input type="text" id="name" name="name" class="form-control" placeholder="John Doe" required>
